# ddkv

./: CHANGES  CMakeLists.txt  LICENCE  README.md  bcode.h  control.c  dht-example.cpp  dht.cpp  dht.h  net.cpp  plan.docx  plan.txt  whiteboard.cpp  whiteboard.h
MSVC/: MSVC.sln  plan.txt
MSVC/contrib/: getopt.h  md5.c  md5.h
MSVC/control/: control.filters  control.vcxproj
MSVC/dht-example/: ddkv.ip  dht-example.filters  dht-example.vcxproj
MSVC/server/: server.vcxproj
config/: st-control.bat  st-control.sh  st-server.sh
contrib/: bcode.cpp  bcode.h  getopt_long.c  sha1.c  sha1.h
doc/: BitTorrent的DHT协议(译自官方版本).docx  Kademlia、DHT、KRPC、BitTorrent 协议、DHT Sniffer.docx
